# fiddy-paper-scraper

./: .gitignore  README.md
scripts/: pyproject.toml  scraper.py
terraform/: bigquery.tf  buckets.tf  main.tf  providers.tf  startup-script.sh  terraform.tfstate  terraform.tfstate.backup  variables.tf
